--- a/端到端Test-Puppeteer/1核心概念.md
+++ b/端到端Test-Puppeteer/1核心概念.md
@@ -111,8 +111,195 @@
 
 Puppeteer 允许通过鼠标、触摸事件和键盘输入与页面上的元素进行交互。通过，首选 CSS 选择器查询 DOM 元素，然后对元素调用操作。除 CSS 选择器被 Puppeteer 默认 API 支持以外，还提供了自动以选择器语法，允许使用 XPath、Text、Accessibility 属性查找元素并访问 Shadow DOM。
 
-除了对选择的元素发出鼠标或键盘事件外，还可以直接使用 `page.mouse` 、`page.keyboard` 和 `page.touchscreen` API;
+### 定位器：
 
-### Locators：
+定位器（Locators）是选择元素并与之交互的推荐方式，定位器 API 支持 Puppeteer 自动等待元素在 DOM 中处于可操作的正确状态。当 定位器 API 无法满足要求时仍可以使用低级别的 API，例如：`page.waitForSelector()` 或 `ElementHandle`。
 
+1. 使用定位器单机元素：
 
+   ```javascript
+   await page.locator('button').click();
+   ```
+
+   PS：定位器会在单击前自动检查以下内容：
+
+   * 确保元素位于视口中
+   * 等待元素变得可见或隐藏
+   * 等待元素启用
+   * 等待元素在两个连续的动画帧上具有稳定的边界框
+
+2. 使用定位器录入内容：
+
+   ```javascript
+   await page.locator('input').fill('hello world');
+   ```
+
+   PS：定位器会在输入前自动检查以下内容：
+
+   * 确保元素位于视口中
+   * 等待元素变得可见或隐藏
+   * 等待元素启用
+   * 等待元素在两个连续的动画帧上具有稳定的边界框
+
+3. 使用定位器实现鼠标悬停（hover）：
+
+   ```javascript
+   await page.locator('div').hover();
+   ```
+
+   PS：定位器会在悬停前自动检查以下内容：
+
+   * 确保元素位于视口中
+   * 等待元素变得可见或隐藏
+   * 等待元素在两个连续的动画帧上具有稳定的边界框。
+
+4. 使用定位器滚动元素：
+
+   ```javascript
+   await page.locator('div').scroll({
+       scrollTop: 10,
+       scrollLeft: 20
+   });
+   ```
+
+   PS：定位器会在滚动前自动检查以下内容：
+
+   * 确保元素位于视口中
+   * 等待元素变得可见或隐藏
+   * 等待元素在两个连续的动画帧上具有稳定的边界框
+
+5. 使用定位器等待元素可见：
+
+   ```javascript
+   await page.locator('.loading').wait();
+   ```
+
+   PS：定位器在返回前会检查以下内容：
+
+   * 等待元素变得可见或隐藏
+
+6. 使用定位器实现等待函数：
+
+   示例中展示了使用定位器实现 JavaScript 函数 等待 `MutationObserver` 检测页面出现 `MutationObserver` 元素：
+
+   ```javascript
+   await page.locator(() => {
+       let resolve;
+       const promise = new Promise((res) => {
+           return (resolve = res)
+       });
+       const observer = new MutationObserver((records) => {
+           for (const record of records) {
+               if (record.target instanceof HTMLCanvasElement) {
+                   resolve(record.target);
+               }
+           }
+       });
+       observer.observe(document);
+       return promise;
+   }).wait()
+   ```
+
+7. 定位器与过滤器配合：
+
+   示例中展示了使用定位器匹配 `button` 且通过过滤器再次匹配 `button` 文本中包含 `Click Me` 的元素，最后才会点击此元素。
+
+   ```javascript
+   await page.locator('button')
+   	.filter(el = el.innerText().includes('Click Me'))
+     .click();
+   ```
+
+8. 从定位器获取值：
+
+   使用 `map` 函数将元素映射为 JavaScript 值，再调用 `wait()` 将返回序列化的 JavaScript 值：
+
+   ```javascript
+   const enabled = await page.locator('button')
+   	.map(el => !el.disabled).wait();
+   ```
+
+9. 从定位器获取 ElementHandles：
+
+   使用 `waitHandle()` 函数将返回 ElementHandles 实例。如果定位器内置 API 无法满足时，此操作会很有用。
+
+   ```javascript
+   const buttonHandle = await page.locator('button').waitHandle();
+   await buttonHandle.click();
+   ```
+
+10. 配置定位器自检项：
+
+    配置定位器以改变定位器默认的自动检查项，实例中将不做任何检查对按钮触发单击事件：
+
+    ```javascript
+    await page.locator('button')
+      .setEnsureElementIsInTheViewport(false)
+      .setVisibility(null)
+      .setWaitForEnabled(false)
+      .setWaitForStableBoundingBox(false)
+      .click();
+    ```
+
+11. 配置定位器超时：
+
+    由于网页的响应速度存在差异，默认的超时时间不满足需要的情况下，可使用 `setTimeout()` 函数适当延长，超时后将抛出 TimeoutError 异常：
+
+    ```javascript
+    await page.locator('button').setTimeout(5 * 1000).click();
+    ```
+
+12. 获取定位器事件：
+
+    目前定位器支持一个单独的事件，事件会在定位器准备执行某项动作前触发，以此表示所有前置条件已经得到满足，此事件可在日志记录或调试等场景发挥一定的作用：
+
+    ```javascript
+    await page.locator('button')
+      .on(LocatorEvent.Action, () => {
+          console.log('clicked');
+      }).click();
+    ```
+
+### 等待执行选择器 ：
+
+等待选择器（waitForSelector）与定位器相比是一个比较低级别的 API，等待选择器允许等待元素在 DOM 中可用但不会自动重试该操作，并且需要手动释放生成的 ElementHandle 以防止内存泄漏。
+
+```javascript
+import pprt from "puppeteer"
+
+(async () => {
+    
+    const browser = await pprt.launch()
+    const page = await browser.newPage()
+    await page.goto("URL_ADDRESS")
+
+    // 使用 waitForSelector 查询句柄
+    const element = await page.waitForSelector("div > .class-name")
+    await element.click();
+
+    // 注意释放资源
+    await element.dispose();
+
+    await browser.close();
+    
+})()
+```
+
+### 立即执行选择器：
+
+立即查询选择器是由 Puppeteer 提供查询已知存在于页面元素的一组 API：
+
+| API           | 描述                                                     |
+| :------------ | -------------------------------------------------------- |
+| page.$()      | 返回与选择器匹配的单个元素                               |
+| page.$$()     | 返回与选择器匹配的多个元素                               |
+| page.$eval()  | 返回与选择器匹配的第一个元素上运行 JavaScript 函数的结果 |
+| page.$$eval() | 返回与选择器匹配的每一个元素上运行 JavaScript 函数的结果 |
+
+### 选择器支持：
+
+Puppeteer 在接收选择器的 API 中都支持接收 CSS 选择器。此外，还可以使用其他选择器语法。
+
+1. 非 CSS 选择器：
+2. 在 Shadow DOM 中查询元素：
+3. 前缀选择器语法：
