--- a/端到端Test-Puppeteer/1核心概念.md
+++ b/端到端Test-Puppeteer/1核心概念.md
@@ -296,10 +296,146 @@ import pprt from "puppeteer"
 | page.$eval()  | 返回与选择器匹配的第一个元素上运行 JavaScript 函数的结果 |
 | page.$$eval() | 返回与选择器匹配的每一个元素上运行 JavaScript 函数的结果 |
 
-### 选择器支持：
+### 选择器扩展：
 
-Puppeteer 在接收选择器的 API 中都支持接收 CSS 选择器。此外，还可以使用其他选择器语法。
+Puppeteer 在选择器 API 中接受 CSS 选择器，此外还扩展了额外的选择器语法来为 CSS 选择器提供更多的功能。
 
-1. 非 CSS 选择器：
-2. 在 Shadow DOM 中查询元素：
-3. 前缀选择器语法：
+1. 非 CSS 选择器：Puppeteer 自定义伪元素扩展 CSS语法实现非 CSS 选择器选择元素。
+
+   1. XPath 选择器（`-p-path`）：
+
+      ```javascript
+      import pptr from 'puppeteer'
+      
+      (async () => {
+          const browser = await pptr.launch({ headless: false })
+          const page = await browser.newPage()
+          await page.setViewport({ width: 1080, height: 1024 })
+          await page.goto('https://developer.mozilla.org/zh-CN/')
+      
+        	// XPath 选择器
+          const textContent = await page.locator('::-p-xpath((//*[@class="tile-container"]/div/h3/a)[1])')
+            .map(el => el.textContent)
+            .wait()
+          console.log(textContent)
+      
+          await page.screenshot({ path: 'screenshot.png' })
+          await browser.close()
+      })()
+      ```
+
+   2. 文本选择器（`-p-text`）：
+
+      ```javascript
+      import pptr from 'puppeteer'
+      
+      (async () => {
+          const browser = await pptr.launch({ headless: false })
+          const page = await browser.newPage()
+          await page.setViewport({ width: 1080, height: 1024 })
+          await page.goto('https://developer.mozilla.org/zh-CN/')
+      		
+        	// 文本选择器
+          const textContent = await page.locator('::-p-text(Developer essentials: JavaScript console methods)')
+          	.map(el => el.textContent)
+          	.wait()
+      		console.log(textContent)
+      
+          await page.screenshot({ path: 'screenshot.png' })
+          await browser.close()
+      })()
+      ```
+
+   3. ARIA 选择器（`-p-aria`）：
+
+      ```javascript
+      import pptr from 'puppeteer'
+      
+      (async () => {
+          const browser = await pptr.launch({ headless: false })
+          const page = await browser.newPage()
+          await page.setViewport({ width: 1080, height: 1024 })
+          await page.goto('https://developer.mozilla.org/zh-CN/')
+      
+        	// 无障碍属性选择器
+          const innerHTML = await page.locator('::-p-aria(MDN homepage)')
+            .map(el => el.innerHTML)
+            .wait()
+          console.log(innerHTML)
+      
+          await page.screenshot({ path: 'screenshot.png' })
+          await browser.close()
+      })()
+      ```
+
+   4. Pierce 选择器（`pierce/`）：
+
+      ```javascript
+      import pptr from 'puppeteer'
+      
+      (async () => {
+          const browser = await pptr.launch({ headless: false })
+          const page = await browser.newPage()
+          await page.setViewport({ width: 1080, height: 1024 })
+          await page.goto('https://mdn.github.io/web-components-examples/composed-composed-path/')
+        
+        	// 穿透 shadow DOM 选择器
+          const textContent = await page.locator('& >>> p')
+          	.map(el => el.textContent)
+          	.wait()
+          console.log(textContent)
+      
+          await page.screenshot({ path: 'screenshot.png' })
+          await browser.close()
+      })()
+      ```
+
+2. Shadow DOM 选择器：CSS 选择器不允许穿透 Shadow DOM，因此，Puppeteer 在 CSS 选择器语法中添加了两个组合器，允许在 Shadow DOM 中进行搜索。
+
+   1. `>>>` 深度组合器：类似于 CSS 后代组合器（用单空格表示，例如 `div button`）；
+   2. `>>>>` 深度子组合器：类似于 CSS 子组合器（用 `>` 表示，例如 `div > button`）；
+   3. 
+
+3. 带前缀选择器语法：`${nonCssSelectorName}/${nonCssSelector}` 为旧语法，允许一次运行一个非 CSS 选择器，不允许组合多个选择器，切不再推荐使用。
+
+   1. 通过文本选择器匹配元素，并返回该元素的文本内容：
+
+      ```javascript
+      // 文本选择器
+      const textContent = await page.locator('text/Developer essentials: JavaScript console methods')
+        .map(el => el.textContent)
+        .wait()
+      console.log(textContent)
+      ```
+
+   2. 通过 XPath 选择器匹配元素，并返回该元素的文本内容：
+
+      ```javascript
+      // XPath 选择器
+      const textContent = await page.locator('xpath/(//*[@class="tile-container"]/div/h3/a)[1]')
+         .map(el => el.textContent)
+         .wait()
+      console.log(textContent)
+      ```
+
+   3. 通过无障碍选择器匹配元素，并返回该元素的 HTML 结构：
+
+      ```javascript
+      // 无障碍属性选择器
+      const innerHTML = await page.locator('aria/MDN homepage')
+         .map(el => el.innerHTML)
+         .wait()
+      console.log(innerHTML)
+      ```
+
+   4. 通过 Pierce 选择器匹配 shadow DOM 元素，并返回第一个元素的文本内容：
+
+      ```javascript
+      // 穿透 shadow DOM 选择器
+      const textContent = await page.locator('pierce/p')
+      	.map(el => el.textContent)
+      	.wait()
+      console.log(textContent)
+      ```
+
+      
