--- a/端到端Test-Puppeteer/0快速上手.md
+++ b/端到端Test-Puppeteer/0快速上手.md
@@ -36,7 +36,7 @@ mkdir start-pptr && cd start-pptr
 npm init -y
 npm i puppeteer
 echo 'console.log("Hello World!");' > index.mjs
-npm set-script start "node index.mjs"
+npm pkg set scripts.start="node index.mjs" // v7.24.2 +
 ```
 
 非 `headless` 模式下完成浏览器的启动和导航：
