--- a/端到端Test-Puppeteer/1核心概念.md
+++ b/端到端Test-Puppeteer/1核心概念.md
@@ -10,7 +10,7 @@
 
 * 浏览器管理
 * 页面交互
-* JavaScript Execution
+* JavaScript 执行器
 * 网络侦听
 
 ## 浏览器管理：
@@ -394,7 +394,7 @@ Puppeteer 在选择器 API 中接受 CSS 选择器，此外还扩展了额外的
 
    1. `>>>` 深度组合器：类似于 CSS 后代组合器（用单空格表示，例如 `div button`）；
    2. `>>>>` 深度子组合器：类似于 CSS 子组合器（用 `>` 表示，例如 `div > button`）；
-   3. 
+   3. 自定义选择器：？？？
 
 3. 带前缀选择器语法：`${nonCssSelectorName}/${nonCssSelector}` 为旧语法，允许一次运行一个非 CSS 选择器，不允许组合多个选择器，切不再推荐使用。
 
@@ -438,4 +438,68 @@ Puppeteer 在选择器 API 中接受 CSS 选择器，此外还扩展了额外的
       console.log(textContent)
       ```
 
-      
+
+## JavaScript 执行器：
+
+Puppeteer 运行在 Puppeteer 驱动的页面上下文中执行 JavaScript 函数。
+
+在示例中通过编写 JavaScript 函数来获取 MDN 网页中的指定元素：
+
+```javascript
+import puppeteer from "puppeteer"
+
+(async () => {
+    const browser = await puppeteer.launch()
+    const page = await browser.newPage()
+    await page.goto("https://developer.mozilla.org/zh-CN/")
+
+  	// 获取第一个 h1 元素
+    const innerHTML = await page.evaluate(() => document.querySelector('h1').innerHTML)
+    console.log(innerHTML)
+  
+    await browser.close()
+})()
+```
+
+重构此函数以支持参数传递，灵活获取元素：
+
+```JavaScript
+const innerHTML = await page.evaluate(
+    (selector) => document.querySelector(selector).innerHTML,
+    'h1'
+)
+```
+
+如果此函数返回一个对象，Puppeteer 会将其序列化为 JSON 并在脚本端对齐重建。此过程可能会得到不正确的结果，为了处理返回的对象，Puppeteer 提供了一种通过引用返回对象的方法：
+
+```javascript
+const handle = await page.evaluateHandle(
+    (selector) => document.querySelector(selector),
+    'h1'
+)
+console.log(handle instanceof ElementHandle)
+```
+
+## 网络请求日志：
+
+Puppeteer 默认监听所有网络的请求和响应，并在页面上发出网络事件。
+
+```javascript
+import puppeteer from "puppeteer"
+
+(async () => {
+
+    const browser = await puppeteer.launch()
+    const page = await browser.newPage()
+    await page.goto("https://developer.mozilla.org/zh-CN/")
+
+    page.on("request", request => {
+        console.log(request.url())
+    })
+
+    page.on("respone", respone => {
+        console.log(respone.url())
+    })
+})()
+```
+
