--- a/端到端Test-Puppeteer/1核心概念.md
+++ b/端到端Test-Puppeteer/1核心概念.md
@@ -379,7 +379,7 @@ Puppeteer 在选择器 API 中接受 CSS 选择器，此外还扩展了额外的
           await page.setViewport({ width: 1080, height: 1024 })
           await page.goto('https://mdn.github.io/web-components-examples/composed-composed-path/')
         
-        	// 穿透 shadow DOM 选择器
+        	// 穿透 shadow DOM 选择器，深度组合器
           const textContent = await page.locator('& >>> p')
           	.map(el => el.textContent)
           	.wait()
@@ -390,11 +390,40 @@ Puppeteer 在选择器 API 中接受 CSS 选择器，此外还扩展了额外的
       })()
       ```
 
+   5. 自定义选择器：
+
+      ```javascript
+      import puppeteer, { Puppeteer } from "puppeteer"
+      
+      (async () => {
+          // 注册 class 选择器 
+          Puppeteer.registerCustomQueryHandler('class', {
+              queryOne: (node, selector) => {
+                  return node.querySelector(`.${selector}`)
+              },
+              queryAll: (node, selector) => {
+                  return [...node.querySelectorAll(`.${selector}`)]
+              }
+          })
+      
+          const browser = await puppeteer.launch()
+          const page = await browser.newPage()
+          await page.goto("https://developer.mozilla.org/zh-CN/")
+      
+          // 使用 class 选择器
+          const innerHTML = await page.locator('::-p-class(tile-title)').map(el => el.innerText).wait()
+          console.log(innerHTML)
+      
+          await browser.close()
+      })()
+      ```
+
+      
+
 2. Shadow DOM 选择器：CSS 选择器不允许穿透 Shadow DOM，因此，Puppeteer 在 CSS 选择器语法中添加了两个组合器，允许在 Shadow DOM 中进行搜索。
 
    1. `>>>` 深度组合器：类似于 CSS 后代组合器（用单空格表示，例如 `div button`）；
    2. `>>>>` 深度子组合器：类似于 CSS 子组合器（用 `>` 表示，例如 `div > button`）；
-   3. 自定义选择器：？？？
 
 3. 带前缀选择器语法：`${nonCssSelectorName}/${nonCssSelector}` 为旧语法，允许一次运行一个非 CSS 选择器，不允许组合多个选择器，切不再推荐使用。
 
