--- a/端到端Test-Puppeteer/2使用指南.md
+++ b/端到端Test-Puppeteer/2使用指南.md
@@ -8,3 +8,47 @@
 
 # 使用指南
 
+
+
+## 配置：
+
+
+
+## 调试：
+
+
+
+## 请求拦截：
+
+
+
+## 无头模式：
+
+
+
+## 截图：
+
+
+
+## PDF 生成：
+
+
+
+## Chrome 扩展：
+
+
+
+## Cookies：
+
+
+
+## 文件：
+
+
+
+## 在浏览器中运行 Puppeteer：
+
+
+
+## 在 Chrome 扩展中运行 Puppeteer：
+
