--- a/端到端Test-Puppeteer/03-使用指南.md
+++ b/端到端Test-Puppeteer/03-使用指南.md
@@ -109,6 +109,36 @@ console.log(browser.debugInfo.pendingProtocolErrors);
 
 ## 请求拦截：
 
+请求拦截需要调用 `await page.setRequestInterception(true)` 主动启用，启用后每个请求都将被停止，除非你主动该变该请求为继续、响应或中止状态。
+
+```JavaScript
+import puppeteer from 'puppeteer';
+
+(async () => {
+  const browser = await puppeteer.launch();
+  const page = await browser.newPage();
+  await page.setRequestInterception(true);
+  page.on('request', request => {
+    // 判断是否已经处理过请求
+    if (request.isInterceptResolutionHandled()) return;
+    if (
+      request.url().endsWith('.png') ||
+      request.url().endsWith('.jpg')
+    )
+      request.abort(); // 拦截请求
+    else request.continue(); // 继续请求
+  });
+  await page.goto('https://developer.mozilla.org/zh-CN/');
+  await browser.close();
+})();
+```
+
+### 多拦截器模式和异步解析
+
+
+
+### 协作拦截模式
+
 
 
 ## 无头模式：
@@ -135,7 +165,24 @@ const browser = await puppeteer.launch({headless: false});
 
 ## 截图：
 
-要捕获屏幕截图可以使用 `await page.screenshot({ path: 'screenshot.png', });`。
+要捕获屏幕截图可以使用：
+
+```javascript
+import puppeteer from 'puppeteer'
+
+(async () => {
+    const browser = await puppeteer.launch()
+    const page = await browser.newPage()
+    await page.goto('https://developer.mozilla.org/zh-CN/', {
+      	// Waits till there are no more than 2 network connections for at least `500` ms.
+        waitUntil: 'networkidle2'
+    })
+    await page.screenshot({
+        path: 'screenshot.png',
+    });
+    await browser.close();
+})()
+```
 
 要捕获特定元素的截图可以使用：
 
@@ -150,7 +197,23 @@ await element.screenshot({
 
 ## PDF 生成：
 
+要打印 PDF 可以使用 `page.pdf()` 方法，默认情况下这个方法会等待字体文件的加载。
 
+```JavaScript
+import puppeteer from 'puppeteer'
+
+(async () => {
+    const browser = await puppeteer.launch()
+    const page = await browser.newPage()
+    await page.goto('https://developer.mozilla.org/zh-CN/', {
+        waitUntil: 'networkidle2'
+    })
+    await page.pdf({
+        path: 'mozilla.pdf',
+    });
+    await browser.close();
+})()
+```
 
 ## Chrome 扩展：
 
