--- a/端到端Test-Puppeteer/03-使用指南.md
+++ b/端到端Test-Puppeteer/03-使用指南.md
@@ -1,10 +1,73 @@
 # 使用指南
 
-
-
 ## 配置：
 
+Puppeteer 中的所有默认配置都可以通过两种方式进行自定义：
 
+1. 配置文件；
+2. 环境变量；
+
+### 配置文件：
+
+配置文件是配置 Puppeteer 的推荐选择，配置文件的格式支持如下：
+
+* .puppeteerrc.cjs
+* .puppeteerrc.js
+* .puppeteerrc (YAML、JSON)
+* .puppeteerrc.json
+* .puppeteerrc.config.js
+* .puppeteerrc.config.cjs
+
+以下是支持配置的选项：
+| 选项                            | 类型                        | 描述                                                         |
+| ------------------------------- | --------------------------- | ------------------------------------------------------------ |
+| browserRevision                 | string                      | 指定浏览器版本号，默认值为当前 Puppeteer 内置的浏览器版本号  |
+| cacheDirectory                  | string                      | 指定 Puppeteer 使用的缓存目录，默认通过 `path.join(os.homedir(), '.cache', 'puppeteer')` 配置路径 |
+| defaultProduct                  | 'chrome' \| 'firefox'       | 指定浏览器产品，默认为 `chrome`浏览器                        |
+| downloadBaseUrl                 | string                      | 指定下载浏览器的前缀地址，不同的浏览器产品对应的下载路径不同：<br />https://storage.googleapis.com/chrome-for-testing-public or https://archive.mozilla.org/pub/firefox/nightly/latest-mozilla-central, |
+| executablePath                  | string                      | 指定 [puppeteer.launch](https://pptr.dev/api/puppeteer.puppeteernode.launch) 启动路径，默认会自动查找安装路径 |
+| experiments                     | Record<string, never>       | 指定 Puppeteer 的实验选项                                    |
+| logLevel                        | 'silent' \|'error' \|'warn' | 指定日志输出级别，默认为 `warn` 级别                         |
+| skipChromeDownload              | boolean                     | 安装 Puppeteer 时跳过 Chrome 下载                            |
+| skipChromeHeadlessShellDownload | boolean                     | 安装 Puppeteer 时跳过 chrome-headless-shell 下载             |
+| skipDownload                    | boolean                     | 安装 Puppeteer 时跳过下载                                    |
+| temporaryDirectory              | string                      | 指定 Puppeteer 使用的临时文件目录，默认通过 `os.tmpdir()` 配置路径 |
+
+PS：https://pptr.dev/api/puppeteer.configuration
+
+配置文件使用示例：
+
+```javascript
+const { join } = require('path');
+
+/**
+ * @type {import('puppeteer').Configuration}
+ */
+module.exports = {
+  	// 修改缓存目录后需要重新安装 Puppeteer，以保证新的缓存目录中包含的运行的必要文件
+    cacheDirectory: join(__dirname, '.cache', 'puppeteer')
+}
+```
+
+### 环境变量
+
+环境变量配置的等级要高于配置文件，在使用时要特别注意。
+
+以下是支持的环境变量：
+
+| 环境变量                                      | 配置文件选项                    |
+| --------------------------------------------- | ------------------------------- |
+| PUPPETEER_BROWSER_REVISION                    | browserRevision                 |
+| PUPPETEER_CACHE_DIR                           | cacheDirectory                  |
+| PUPPETEER_PRODUCT                             | defaultProduct                  |
+| PUPPETEER_DOWNLOAD_BASE_URL                   | downloadBaseUrl                 |
+| PUPPETEER_EXECUTABLE_PATH                     | executablePath                  |
+| PUPPETEER_SKIP_CHROME_DOWNLOAD                | skipChromeDownload              |
+| PUPPETEER_SKIP_CHROME_HEADLESS_SHELL_DOWNLOAD | skipChromeHeadlessShellDownload |
+| PUPPETEER_SKIP_DOWNLOAD                       | skipDownload                    |
+| PUPPETEER_TMP_DIR                             | temporaryDirectory              |
+
+PS：此外还有 HTTP_PROXY、HTTPS_PROXY、NO_PROXY 用于定义下载和运行浏览器的代理设置
 
 ## 调试：
 
@@ -227,9 +290,9 @@ import puppeteer from 'puppeteer'
 
 
 
-## 在浏览器中运行 Puppeteer：
+## 在浏览器中运行：
 
 
 
-## 在 Chrome 扩展中运行 Puppeteer：
+## 在 Chrome 扩展中运行：
 
