--- a/端到端Test-Puppeteer/03-使用指南.md
+++ b/端到端Test-Puppeteer/03-使用指南.md
@@ -2,10 +2,7 @@
 
 ## 配置：
 
-Puppeteer 中的所有默认配置都可以通过两种方式进行自定义：
-
-1. 配置文件；
-2. 环境变量；
+Puppeteer 中的所有默认配置都可以通过配置文件和环境变量两中方式。
 
 ### 配置文件：
 
@@ -280,19 +277,71 @@ import puppeteer from 'puppeteer'
 
 ## Chrome 扩展：
 
+Puppeteer 可以用于测试 Chrome 扩展程序，但需要注意的是 `headless: 'shell'` 模式中不可用。
 
+首先准备一个仅包含 `service_worker` 的后台脚本，并配置好 `manifest.json` ：
+
+```json
+{
+    "name": "Hello World",
+    "version": "0.1",
+    "manifest_version": 3,
+    "background": {
+        "service_worker": "background.js"
+    }
+}
+```
+
+```JavaScript
+// background.js
+console.log("background.js loaded");
+```
+
+将插件放到项目目录的 `my-extension` 文件夹中，接着通过配置 `args` 选项，加载插件：
+
+```javascript
+import puppeteer from 'puppeteer'
+import path from 'path'
+import process from 'process'
+
+const extensiondir = path.join(process.cwd(), 'my-extension');
+
+(async () => {
+    const browser = await puppeteer.launch({
+        args: [
+            `--disable-extensions-except=${extensiondir}`,
+            `--load-extension=${extensiondir}`,
+        ],
+    })
+
+    await browser.close();
+})()
+```
+
+最后通过 `evaluate()` 函数在后台脚本中通过 `chrome.runtime.getManifest()` 获取插件的版本信息：
+
+```javascript
+const workerTarget = await browser.waitForTarget(
+    target => target.type() === 'service_worker' && target.url().endsWith('background.js')
+);
+const worker = await workerTarget.worker();
+const version = await worker.evaluate(() => chrome.runtime.getManifest().version);
+console.log(version);
+```
+
+PS：Puppeteer 文档显示目前尚无法测试扩展程序的内容脚本。
 
 ## Cookies：
 
-
+Puppeteer 提供了设置 Cookie 的函数 `await page.setCookie({})` 和提取页面所设置的 Cookie 的函数 `await page.cookies()`。
 
 ## 文件：
 
-
+Puppeteer  不提供以编程方式处理文件下载的方法，要上传文件，需要找到一个文件输入元素并调用 `ElementHandle.uploadFile('./local-file')`。
 
 ## 在浏览器中运行：
 
 
 
-## 在 Chrome 扩展中运行：
+## 在Chrome扩展中运行：
 
