--- a/端到端Test-Puppeteer/03-使用指南.md
+++ b/端到端Test-Puppeteer/03-使用指南.md
@@ -176,31 +176,151 @@ console.log(browser.debugInfo.pendingProtocolErrors);
 import puppeteer from 'puppeteer';
 
 (async () => {
-  const browser = await puppeteer.launch();
-  const page = await browser.newPage();
-  await page.setRequestInterception(true);
-  page.on('request', request => {
-    // 判断是否已经处理过请求
-    if (request.isInterceptResolutionHandled()) return;
-    if (
-      request.url().endsWith('.png') ||
-      request.url().endsWith('.jpg')
-    )
-      request.abort(); // 拦截请求
-    else request.continue(); // 继续请求
-  });
-  await page.goto('https://developer.mozilla.org/zh-CN/');
-  await browser.close();
+    const browser = await puppeteer.launch({
+        headless: false
+    });
+    const page = await browser.newPage();
+    await page.setViewport({ width: 1920, height: 1080 });
+    await page.setRequestInterception(true);
+    page.on('request', request => {
+        // 判断是否已经处理过请求
+        if (request.isInterceptResolutionHandled()) return;
+        if (
+            request.url().endsWith('.png') ||
+            request.url().endsWith('.jpg')
+        )
+            request.abort(); // 拦截请求
+        else request.continue(); // 继续请求
+    });
+    await page.goto('https://taobao.com');
+    await browser.close();
 })();
 ```
 
-### 多拦截器模式和异步解析
+### 多拦截器和异步执行
 
+默认情况下，如果 request.abort()、request.continue() 或 request.respond() 在已调用其中任一 API 后被调用，会引发 `Request is already handled!` 异常，这也是在上面案例在一开始要判断请求是否已经被处理过的主要原因。
 
+在同步代码块中使用 `request.isInterceptResolutionHandled()` API 是绝对安全的，下面的示例演示了两个同步拦截程序一起工作：
+
+```JavaScript
+/*
+	请求将首先进入此拦截函数，并正常通过 if 判断（因为请求还没有被处理过），最终由执行 request.continue() 允许请求继续执行 
+*/
+page.on('request', request => {
+  if (request.isInterceptResolutionHandled()) return;
+  request.continue();
+});
+
+/*
+	请求进入此拦截函数之前已经被上一个拦截函数处理，所以并不会通过 if 判断，此处就体现了同步代码块中 API 调用绝对安全的特性
+*/
+page.on('request', request => {
+  if (request.isInterceptResolutionHandled()) return;
+  request.abort();
+});
+```
+
+下面通过一个异步执行的示例演示多拦截器的协同工作：
+
+```JavaScript
+page.on('request', request => {
+   	// 请求依然是首先进入此拦截函数，并正常通过 if 判断（因为请求还没有被处理过）
+    if (request.isInterceptResolutionHandled()) return;
+
+    // 返回 Promise 虽然不是必须的，但这样可以允许 Puppeteer 等待此函数处理
+    return new Promise(resolve => {
+        // 请求将在 500 毫秒后被允许继续执行
+        setTimeout(() => {
+            // 因为请求可能在 500 毫秒内被另一个拦截器处理，所以需要再次检查
+            if (request.isInterceptResolutionHandled()) {
+                resolve();
+                return;
+            }
+            request.continue();
+            resolve();
+        }, 500);
+    });
+});
+page.on('request', async request => {
+    // 由于上个拦截器存在 500 毫秒的延迟处理，所以请求很有可能在没有被处理过就进入了此拦截器，所以请求可能会通过 if 判断
+    if (request.isInterceptResolutionHandled()) return;
+
+  	// 这里可以是一个较长时间的异步处理函数
+    await someLongAsyncOperation();
+
+  	// 在经过一个较长时间的异步处理函数执行到此行代码是，请求又可能被第一个拦截器处理过了，所以需要再次检查
+    if (request.isInterceptResolutionHandled()) return;
+    request.continue();
+});
+```
+
+下面的示例是使用 `request.interceptResolutionState()` API 重写多拦截器异步协同工作的重写：
+
+```JavaScript
+page.on('request', request => {
+    const { action } = request.interceptResolutionState();
+    if (action === InterceptResolutionAction.AlreadyHandled) return;
+
+    return new Promise(resolve => {
+        setTimeout(() => {
+            const { action } = request.interceptResolutionState();
+            if (action === InterceptResolutionAction.AlreadyHandled) {
+                resolve();
+                return;
+            }
+            request.continue();
+            resolve();
+        }, 500);
+    });
+});
+
+page.on('request', async request => {
+    if (
+        request.interceptResolutionState().action ===
+        InterceptResolutionAction.AlreadyHandled
+    )
+        return;
+
+    await someLongAsyncOperation();
+
+    if (
+        request.interceptResolutionState().action ===
+        InterceptResolutionAction.AlreadyHandled
+    )
+        return;
+    request.continue();
+});
+```
 
 ### 协作拦截模式
 
+request.abort、request.continue 和 request.respond 可以接受一个可选的 `priority` 值在协作拦截模式下工作。当所有处理程序都使用协作拦截模式时，Puppeteer 保证所有拦截处理程序将按注册顺序运行并等待。拦截被解析为最高优先级。以下是协作拦截模式的规则：
 
+1. 所有处理程序都必须提供优先级（`priority`）数值；
+2. 如果为提供优先级数值，则”传统模式“处于活动状态，而”协作拦截模式“处于非活动状态；
+3. 异步处理程序会在最终处理程序截获之前完成；
+4. 最高优先级的处理函数会被执行，但遇到优先级相同时，将按 `abort` > `respond` > `continue`  顺序执行；
+
+在指定协作拦截模式时，除非要设置更高的优先级，否则请使用 0 或 `HTTPRequest.DEFAULT_INTERCEPT_RESOLUTION_PRIORITY` 。
+
+下面的示例演示了传统模式占据最高优先级，请求会立即中止，因为在解析拦截器时只有有一个处理程序省略了 `priority`：
+
+```javascript
+page.on('request', request => {
+  if (request.isInterceptResolutionHandled()) return;
+  request.continue({}, 0);
+});
+
+page.on('request', request => {
+  if (request.isInterceptResolutionHandled()) return;
+
+  // 传统模式：立即中止
+  request.abort('failed');
+});
+```
+
+PS：这个案例将在控制台收到类似 Error: net::ERR_FAILED at https://taobao.com 的异常信息，因为请求全部被中止掉了，更多的优先级示例见 https://pptr.dev/guides/network-interception#cooperative-request-continuation
 
 ## 无头模式：
 
